# maszyna

./: .clang-format  .gitignore  .tmux-dev  .vimrc  AirCoupler.cpp  AirCoupler.h  AnimModel.cpp  AnimModel.h  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Classes.h  Console.cpp  Console.h  Curve.h  Doxyfile  Driver.cpp  Driver.h  DynObj.cpp  DynObj.h  EU07.cpp  EvLaunch.cpp  EvLaunch.h  Event.cpp  Event.h  Float3d.cpp  Float3d.h  Gauge.cpp  Gauge.h  Globals.cpp  Globals.h  Logs.cpp  Logs.h  Makefile  MdlMngr.cpp  MdlMngr.h  MemCell.cpp  MemCell.h  (+198 more)
Console/: LPT.cpp  LPT.h  PoKeys55.cpp  PoKeys55.h
McZapkie/: MOVER.h  Mover.cpp  Oerlikon_ESt.cpp  Oerlikon_ESt.h  friction.cpp  friction.h  hamulce.cpp  hamulce.h
ci_shadervalidator/: Globals.h  Logs.h  main.cpp  stdafx.h
extras/: piped_proc.cpp  piped_proc.h
gl/: bindable.h  buffer.cpp  buffer.h  cubemap.cpp  cubemap.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  glsl_common.cpp  glsl_common.h  object.h  pbo.cpp  pbo.h  postfx.cpp  postfx.h  query.cpp  query.h  renderbuffer.cpp  renderbuffer.h  shader.cpp  shader.h  ubo.cpp  ubo.h  vao.cpp  vao.h
imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
lang/: pl.po  template.pot
launcher/: deferred_image.h  keymapper.cpp  keymapper.h  launchermode.cpp  launchermode.h  launcheruilayer.cpp  launcheruilayer.h  scenery_list.cpp  scenery_list.h  scenery_scanner.cpp  scenery_scanner.h  textures_scanner.cpp  textures_scanner.h  vehicle_picker.cpp  vehicle_picker.h
network/: manager.cpp  manager.h  message.cpp  message.h  network.cpp  network.h
network/backend/: asio.cpp  asio.h
ref/cppzmq/include/: zmq.h
ref/dds-ktx/include/dds-ktx/: dds-ktx.h
ref/glad/include/KHR/: khrplatform.h
ref/glad/include/glad/: glad.h
ref/glfw/include/GLFW/: glfw3.h  glfw3native.h
ref/glm/glm/detail/: glm.cpp
ref/glm/glm/simd/: common.h  exponential.h  geometric.h  integer.h  matrix.h  platform.h
ref/libpng/include/: png.h  pngconf.h  pngdebug.h  pnginfo.h  pngpriv.h  pngstruct.h
ref/libserialport/include/: libserialport.h
ref/libsndfile/include/: sndfile.h
ref/luajit/include/: lauxlib.h  lua.h  luaconf.h  luajit.h  lualib.h
ref/openal/include/AL/: al.h  alc.h
ref/openvr/include/openvr/: openvr.h
ref/python/include/: Python-ast.h  Python.h  abstract.h  asdl.h  ast.h  bufferobject.h  bytearrayobject.h  cStringIO.h  cellobject.h  ceval.h  classobject.h  cobject.h  code.h  codecs.h  compile.h  complexobject.h  datetime.h  descrobject.h  dictobject.h  dtoa.h  errcode.h  eval.h  fileobject.h  floatobject.h  frameobject.h  funcobject.h  genobject.h  grammar.h  import.h  intobject.h  listobject.h  longintrepr.h  longobject.h  memoryobject.h  methodobject.h  modsupport.h  node.h  object.h  objimpl.h  opcode.h  (+32 more)
ref/zlib/: deflate.h  inftrees.h  zlib.h  zutil.h
simengine/: scene.cpp  scene.h
stb/: stb_image.h
techdoc/: Makefile
techdoc/source/: conf.py  index.rst
techdoc/source/_static/: maszyna.css
techdoc/source/config/: exe.rst  pojazdy.rst
techdoc/source/config/exe/: eu07ini.rst  uart.rst
techdoc/source/config/pojazdy/: fiz.rst
vr/: openvr_imp.cpp  openvr_imp.h  vr_interface.cpp  vr_interface.h
widgets/: cameraview_extcam.cpp  cameraview_extcam.h  map.cpp  map.h  map_objects.cpp  map_objects.h  perfgraphs.cpp  perfgraphs.h  popup.cpp  popup.h  time.cpp  time.h  trainingcard.cpp  trainingcard.h  vehiclelist.cpp  vehiclelist.h  vehicleparams.cpp  vehicleparams.h
